--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "food-order-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080/api",
+  "proxy": "https://food-order-backend-new.herokuapp.com/api",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
+    "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
